@@ -12,6 +12,9 @@ Open Vehicle Monitor System v3 - Change log
     xvu.c.limit.soc.max            -- Charge schedule maximum SOC [%]
     xvu.c.limit.soc.min            -- Charge schedule minimum SOC [%]
     xvu.c.timermode.def            -- Charge timer defined & default [bool]
+- VW e-Up/OBD: optional BMS auto statistics reset between driving & charging
+  New config:
+    [xvu] bms.autoreset            -- yes = enable statistics reset, default no
 - New vehicle: Hyundai Ioniq vFL (HIONVFL)
   https://docs.openvehicles.com/en/latest/components/vehicle_hyundai_ioniqvfl/docs/index.html
 - Webserver: support TLS (https, wss) using self-signed certificates
